[S09P22B305-readme] feat : 리드미 작성

--- a/exec/포팅메뉴얼.md
+++ b/exec/포팅메뉴얼.md
@@ -10,6 +10,7 @@
 - BackEnd
     - Java - 11
     - springboot - 2.7.15
+    - Spring Security
 - FrontEnd
     - React.js 18.2.0
     - Typescript 4.9.5
